--- a/_modules/datasift/push.html
+++ b/_modules/datasift/push.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.push &mdash; datasift 2.1.0 documentation</title>
+    <title>datasift.push &mdash; datasift 2.2.1 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.1.0',
+        VERSION:     '2.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.1.0 documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.2.1 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -55,7 +55,7 @@
 <div class="viewcode-block" id="Push.validate"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.validate">[docs]</a>    <span class="k">def</span> <span class="nf">validate</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">output_type</span><span class="p">,</span> <span class="n">output_params</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Check that a subscription is defined correctly.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushvalidate</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushvalidate</span>
 
 <span class="sd">            :param output_type:   One of DataSift&#39;s supported output types, e.g. s3</span>
 <span class="sd">            :type output_type: str</span>
@@ -65,7 +65,7 @@
 <span class="sd">            :rtype: :class:`~datasift.request.DictResponse`</span>
 <span class="sd">            :raises: :class:`~datasift.exceptions.DataSiftApiException`, :class:`requests.exceptions.HTTPError`</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">json</span><span class="p">(</span><span class="s">&#39;validate&#39;</span><span class="p">,</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">&#39;validate&#39;</span><span class="p">,</span>
                                  <span class="nb">dict</span><span class="p">(</span><span class="n">output_type</span><span class="o">=</span><span class="n">output_type</span><span class="p">,</span> <span class="n">output_params</span><span class="o">=</span><span class="n">output_params</span><span class="p">))</span>
 </div>
     <span class="k">def</span> <span class="nf">_create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">from_hash</span><span class="p">,</span> <span class="n">stream_or_id</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">output_type</span><span class="p">,</span> <span class="n">output_params</span><span class="p">,</span>
@@ -87,13 +87,13 @@
         <span class="k">if</span> <span class="n">end</span><span class="p">:</span>
             <span class="n">params</span><span class="p">[</span><span class="s">&#39;end&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">end</span>
 
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">json</span><span class="p">(</span><span class="s">&#39;create&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">&#39;create&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 
 <div class="viewcode-block" id="Push.create_from_hash"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.create_from_hash">[docs]</a>    <span class="k">def</span> <span class="nf">create_from_hash</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">stream</span><span class="p">,</span> <span class="n">name</span><span class="p">,</span> <span class="n">output_type</span><span class="p">,</span> <span class="n">output_params</span><span class="p">,</span>
                          <span class="n">initial_status</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">start</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Create a new push subscription using a live stream.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushcreate</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushcreate</span>
 
 <span class="sd">            :param stream: The hash of a DataSift stream.</span>
 <span class="sd">            :type stream: str</span>
@@ -119,7 +119,7 @@
                               <span class="n">end</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Create a new push subscription using the given Historic ID.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushcreate</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushcreate</span>
 
 <span class="sd">            :param historics_id: The ID of a Historics query</span>
 <span class="sd">            :type historics_id: str</span>
@@ -144,7 +144,7 @@
 <div class="viewcode-block" id="Push.pause"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.pause">[docs]</a>    <span class="k">def</span> <span class="nf">pause</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Pause a Subscription and buffer the data for up to one hour.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushpause</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushpause</span>
 
 <span class="sd">            :param subscription_id: id of an existing Push Subscription.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -158,7 +158,7 @@
 <div class="viewcode-block" id="Push.resume"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.resume">[docs]</a>    <span class="k">def</span> <span class="nf">resume</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Resume a previously paused Subscription.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushresume</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushresume</span>
 
 <span class="sd">            :param subscription_id: id of an existing Push Subscription.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -172,7 +172,7 @@
 <div class="viewcode-block" id="Push.update"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.update">[docs]</a>    <span class="k">def</span> <span class="nf">update</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="p">,</span> <span class="n">output_params</span><span class="p">,</span> <span class="n">name</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Update the name or output parameters for an existing Subscription.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushupdate</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushupdate</span>
 
 <span class="sd">            :param subscription_id: id of an existing Push Subscription.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -187,12 +187,12 @@
         <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;id&#39;</span><span class="p">:</span> <span class="n">subscription_id</span><span class="p">,</span> <span class="s">&#39;output_params&#39;</span><span class="p">:</span> <span class="n">output_params</span><span class="p">}</span>
         <span class="k">if</span> <span class="n">name</span><span class="p">:</span>
             <span class="n">params</span><span class="p">[</span><span class="s">&#39;name&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">name</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">json</span><span class="p">(</span><span class="s">&#39;update&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">&#39;update&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 </div>
 <div class="viewcode-block" id="Push.stop"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.stop">[docs]</a>    <span class="k">def</span> <span class="nf">stop</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Stop the given subscription from running.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushstop</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushstop</span>
 
 <span class="sd">            :param subscription_id: id of an existing Push Subscription.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -206,7 +206,7 @@
 <div class="viewcode-block" id="Push.delete"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.delete">[docs]</a>    <span class="k">def</span> <span class="nf">delete</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Delete the subscription for the given ID.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushdelete</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushdelete</span>
 
 <span class="sd">            :param subscription_id: id of an existing Push Subscription.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -220,7 +220,7 @@
 <div class="viewcode-block" id="Push.log"><a class="viewcode-back" href="../../datasift.html#datasift.push.Push.log">[docs]</a>    <span class="k">def</span> <span class="nf">log</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">subscription_id</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">page</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">per_page</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">order_by</span><span class="o">=</span><span class="bp">None</span><span class="p">,</span> <span class="n">order_dir</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Retrieve any messages that have been logged for your subscriptions.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushlog</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushlog</span>
 
 <span class="sd">            :param subscription_id: optional id of an existing Push Subscription, restricts logs to a given subscription if supplied.</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -255,7 +255,7 @@
             <span class="n">include_finished</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot; Show details of the Subscriptions belonging to this user.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/pushget</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/pushget</span>
 
 <span class="sd">            :param subscription_id: optional id of an existing Push Subscription</span>
 <span class="sd">            :type subscription_id: str</span>
@@ -329,7 +329,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
