--- a/_modules/datasift/historics_preview.html
+++ b/_modules/datasift/historics_preview.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>datasift.historics_preview &mdash; datasift 2.1.0 documentation</title>
+    <title>datasift.historics_preview &mdash; datasift 2.2.1 documentation</title>
     
     <link rel="stylesheet" href="../../_static/nature.css" type="text/css" />
     <link rel="stylesheet" href="../../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../../',
-        VERSION:     '2.1.0',
+        VERSION:     '2.2.1',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../_static/doctools.js"></script>
-    <link rel="top" title="datasift 2.1.0 documentation" href="../../index.html" />
+    <link rel="top" title="datasift 2.2.1 documentation" href="../../index.html" />
     <link rel="up" title="Module code" href="../index.html" /> 
   </head>
   <body>
@@ -36,7 +36,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
           <li><a href="../index.html" accesskey="U">Module code</a> &raquo;</li> 
       </ul>
     </div>  
@@ -60,15 +60,15 @@
     <span class="k">def</span> <span class="nf">create</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">stream</span><span class="p">,</span> <span class="n">start</span><span class="p">,</span> <span class="n">parameters</span><span class="p">,</span> <span class="n">sources</span><span class="p">,</span> <span class="n">end</span><span class="o">=</span><span class="bp">None</span><span class="p">):</span>
 <div class="viewcode-block" id="HistoricsPreview.create"><a class="viewcode-back" href="../../datasift.html#datasift.historics_preview.HistoricsPreview.create">[docs]</a>        <span class="sd">&quot;&quot;&quot; Create a hitorics preview job.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/previewcreate</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/previewcreate</span>
 
 <span class="sd">            :param stream: hash of the CSDL filter to create the job for</span>
 <span class="sd">            :type stream: str</span>
 <span class="sd">            :param start: Unix timestamp for the start of the period</span>
 <span class="sd">            :type start: int</span>
-<span class="sd">            :param parameters: list of historics preview parameters, can be found at http://dev.datasift.com/docs/api/1/previewcreate</span>
+<span class="sd">            :param parameters: list of historics preview parameters, can be found at http://dev.datasift.com/docs/api/rest-api/endpoints/previewcreate</span>
 <span class="sd">            :type parameters: list</span>
-<span class="sd">            :param sources: list of sources to include, eg. [&#39;twitter&#39;,&#39;facebook&#39;]</span>
+<span class="sd">            :param sources: list of sources to include, eg. [&#39;tumblr&#39;,&#39;facebook&#39;]</span>
 <span class="sd">            :type sources: list</span>
 <span class="sd">            :param end: (optional) Unix timestamp for the end of the period, defaults to min(start+24h, now-1h)</span>
 <span class="sd">            :type end: int</span>
@@ -83,14 +83,14 @@
         <span class="n">params</span> <span class="o">=</span> <span class="p">{</span><span class="s">&#39;hash&#39;</span><span class="p">:</span> <span class="n">stream</span><span class="p">,</span> <span class="s">&#39;start&#39;</span><span class="p">:</span> <span class="n">start</span><span class="p">,</span> <span class="s">&#39;sources&#39;</span><span class="p">:</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">sources</span><span class="p">),</span> <span class="s">&#39;parameters&#39;</span><span class="p">:</span> <span class="s">&#39;,&#39;</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">parameters</span><span class="p">)}</span>
         <span class="k">if</span> <span class="n">end</span><span class="p">:</span>
             <span class="n">params</span><span class="p">[</span><span class="s">&#39;end&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">end</span>
-        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">json</span><span class="p">(</span><span class="s">&#39;create&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
+        <span class="k">return</span> <span class="bp">self</span><span class="o">.</span><span class="n">request</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="s">&#39;create&#39;</span><span class="p">,</span> <span class="n">params</span><span class="p">)</span>
 
     <span class="k">def</span> <span class="nf">get</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">preview_id</span><span class="p">):</span></div>
 <div class="viewcode-block" id="HistoricsPreview.get"><a class="viewcode-back" href="../../datasift.html#datasift.historics_preview.HistoricsPreview.get">[docs]</a>        <span class="sd">&quot;&quot;&quot; Retrieve a Historics preview job.</span>
 
 <span class="sd">            Warning: previews expire after 24 hours.</span>
 
-<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/1/previewget</span>
+<span class="sd">            Uses API documented at http://dev.datasift.com/docs/api/rest-api/endpoints/previewget</span>
 
 <span class="sd">            :param preview_id: historics preview job hash of the job to retrieve</span>
 <span class="sd">            :type preview_id: str</span>
@@ -132,7 +132,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../../index.html">datasift 2.1.0 documentation</a> &raquo;</li>
+        <li><a href="../../index.html">datasift 2.2.1 documentation</a> &raquo;</li>
           <li><a href="../index.html" >Module code</a> &raquo;</li> 
       </ul>
     </div>
